jdk17 compatibility fix