@@ -54,7 +54,7 @@ public final class RepoConfigTest {
     void remotesPriority() throws Exception {
         List<RemoteConfig> remotes = readFull().remotes();
         Assertions.assertEquals(4, remotes.size());
-        Assertions.assertEquals(new RemoteConfig(URI.create("host4.com"), 200, null, null), remotes.getFirst());
+        Assertions.assertEquals(new RemoteConfig(URI.create("host4.com"), 200, null, null), remotes.get(0));
         Assertions.assertEquals(new RemoteConfig(URI.create("host1.com"), 100, null, null), remotes.get(1));
         Assertions.assertEquals(new RemoteConfig(URI.create("host2.com"), 0, "test_user", "12345"), remotes.get(2));
         Assertions.assertEquals(new RemoteConfig(URI.create("host3.com"), -10, null, null), remotes.get(3));
